# ietp

./: .gitignore  README.md  pyproject.toml
Backend/: .prettierrc  README.md  package.json  pyproject.toml
Backend/main/api/: permissions.py  serializers.py  test.rest  urls.py  views.py
Backend/main/core/: managers.py  models.py  urls.py
Backend/main/core/migrations/: 0004_alter_customuser_role.py  0007_alter_bed_asigned_to.py
Backend/main/core/templates/core/: add_edit_model.html  add_staff.html  login.html  staff_detail.html
Backend/main/patients/: admin.py  forms.py  models.py  views.py
Backend/main/patients/management/commands/: generate_patients.py
Backend/main/patients/migrations/: 0003_alter_patient_age_alter_patient_date_of_birth_and_more.py
Backend/main/patients/templates/patients/: treatment_list.html
Backend/main/static/js/: basic.js
Backend/main/templates/: footer.html  nav.html
Frontend/ietp_new/: README.md  pubspec.yaml
Frontend/ietp_new/lib/: main.dart
Frontend/ietp_new/linux/: CMakeLists.txt
Frontend/ietp_new/web/: index.html  manifest.json
Frontend/ietp_new/windows/: CMakeLists.txt
main/: Makefile
main/api/: serializers.py  test.rest  test_dev.rest  urls.py  views.py
main/core/: admin.py  forms.py  models.py  views.py
main/core/migrations/: 0001_initial.py  0002_alter_bed_status_checkup.py  0003_alter_treatment_treatment_date.py  0006_alter_bed_asigned_to.py  0008_delete_bed.py  (+1 more)
main/main/: settings.py  urls.py
main/patients/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
main/templates/: base.html
(+37 files in other folders)
